@@ -1,3 +1,8 @@
+2015-07-07 Giuseppe Salamanna <salaman AT cern.ch>
+	* ttHMultileptonElectronLikelihoodDC14: moved from eta to etaBE(2) cut 
+	* ttHMultileptonLooseEventSaver: added etaBE(2), loose isolation from tool and ele match; and d0sig from AODTrackingHelpers
+	* README: updated to Top,20.3.18
+	
 2015-07-03 David Hohn <david.hohn@cern.ch>
 	* loosen tau cuts
 
